--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -16,11 +16,7 @@
         <td><%= song.band %></td>
         <td>
           <%= link_to 'View Song', song, :class => "btn btn-info" %>
-          <% if song.in_queue? %>
-            <button class="btn btn-primary">In Queue</button> 
-          <% else %>
-            <button class="btn btn-primary add_to_queue_button" id="<%= song.id %>">Queue Song</button>
-          <% end %>
+          <button class="btn btn-primary add_to_queue_button" id="<%= song.id %>">Queue Song</button>
         </td>
       </tr>
     <% end %>
@@ -29,5 +25,16 @@
 <script>
 $("#songs_table").addTableFilter({
   labelText: "Search Songs"
+});
+
+$("document").ready(function() {
+  var songs_in_queue = <%= Song.all_in_queue.map(&:id) %>
+  var current_song = <%= Song.current_song.blank? ? 0 : Song.current_song.id %>
+  songs_in_queue.push(current_song)
+
+  for(var i = 0; i < songs_in_queue.length; i++) {
+    var song_queue_button = $("#" + songs_in_queue[i])
+    song_queue_button.removeClass("add_to_queue_button").text("In Queue")
+  }
 });
 </script>
