Updating the root view to display and refresh the current song and music queue on page load or when next/play is pressed.

--- a/app/views/root/index.html.erb
+++ b/app/views/root/index.html.erb
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="span9 center">
       <div class="row pull-right">
+        <button class="btn btn-small" id="refresh" type="button">Refresh</button>
         <button class="btn btn-small btn-info" id="play" type="button">Play</button>
         <button class="btn btn-small btn-info" id="pause" type="button">Pause</button>
         <button class="btn btn-small btn-info" id="next" type="button">Next</button>
@@ -9,12 +10,12 @@
     </div>
   </div>
   <div class="row">
-    <div class="span9 center">
+    <div class="span9 center hide">
       <%= render :partial => "songs/current_song" %>
     </div>
   </div>
   <div class="row">
-    <div class="span9 center">
+    <div class="span9 center hide">
       <%= render :partial => "songs/music_queue" %>
     </div>
   </div>
