Adding consume on initialize and updating index view column from album to band / artist

--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -4,7 +4,7 @@
     <tr>
       <th></th>
       <th>Song Name</th>
-      <th>Album</th>
+      <th>Band / Artist</th>
       <th>Actions</th>
     </tr>
   </thead>
