Started work on adding a volume slider. Updated home page to refresh queue and current song every 5 seconds. Added rubyracer to gem file.

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -4,3 +4,14 @@
   <li><%= link_to 'Upload Song', '#myModal', :role => "button", :id => 'upload', :"data-toggle" => "modal" %></li>
   <li><%= link_to 'View All Songs', songs_path %></li>
 </ul>
+<!--
+<div class="pull-right">
+  <ul class="nav">
+    <li><a href='#'>Volume</a></li>
+    <li>
+      <span id="volume-value"></span>%
+      <div id="volume"></div>
+    </li>
+  </ul>
+</div>
+-->
