Fixing query for checking the queue and starting on the volume control.

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,10 +7,8 @@
 <!--
 <div class="pull-right">
   <ul class="nav">
-    <li><a href='#'>Volume</a></li>
     <li>
-      <span id="volume-value"></span>%
-      <div id="volume"></div>
+      <span id="volume-value"></span>% <div id="volume"></div>
     </li>
   </ul>
 </div>
