--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= csrf_meta_tags %>
     <link type="image/vnd.microsoft.icon" href="http://www.raspberrypi.org/favicon.ico" rel="shortcut icon"></link>
     <link type="image/x-ico" href="http://www.raspberrypi.org/favicon.ico" rel="icon"></link>
+    <link href=" http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet"></link>
   </head>
   <body>
     <%= render "layouts/header" %>
