--- a/app/views/root/index.html.erb
+++ b/app/views/root/index.html.erb
@@ -1,11 +1,13 @@
 <div class="container">
   <div class="row">
     <div class="span9 center">
+      <div class="row pull-left">
+        <button class="btn btn-small btn-info" id="play" type="button"><i class="icon-play icon-white"></i> Play</button>
+        <button class="btn btn-small btn-info" id="pause" type="button"><i class="icon-pause icon-white"></i> Pause</button>
+        <button class="btn btn-small btn-info" id="next" type="button"><i class="icon-forward icon-white"></i> Next</button>
+      </div>
       <div class="row pull-right">
-        <button class="btn btn-small" id="refresh" type="button">Refresh</button>
-        <button class="btn btn-small btn-info" id="play" type="button">Play</button>
-        <button class="btn btn-small btn-info" id="pause" type="button">Pause</button>
-        <button class="btn btn-small btn-info" id="next" type="button">Next</button>
+        <button class="btn btn-small" id="refresh" type="button"><i class="icon-refresh"></i> Refresh</button>
       </div>
     </div>
   </div>
