--- a/app/assets/stylesheets/volume.slider.css
+++ b/app/assets/stylesheets/volume.slider.css
@@ -2,19 +2,35 @@
   width: 150px;
 }
 
+.volume-control {
+  color: #fff;
+  font-size: 11px;
+  font-weight: bold;
+}
+
 #volume-value {
   color: #fff;
 }
- 
+
+.ui-slider {
+  background-color:#fff;
+}
+
 .ui-slider-horizontal {
   background: #000000 !important;
   border: 1px solid #000000 !important;
-  height: 0.8em !important;
 }
- 
+
+.ui-slider-range {
+  background-color: pink;
+}
+
+.ui-slider-range .ui-widget-header .ui-slider-range-min {
+  background-color: pink;
+}
+
 .ui-slider-range-min {
-  background: url("/assets/metal-slider-fill.png") repeat-x !important;
-  height: 8px;
+  background: url("/images/metal-slider-fill.png") repeat-x !important;
   -moz-border-radius-topleft: 4px;
   -webkit-border-top-left-radius: 4px;
   -khtml-border-top-left-radius: 4px;
@@ -26,10 +42,11 @@
 }
  
 .ui-slider-handle {
-  background: url("/assets/metal-slider-handle.png") !important;
+  
+  background: url("/images/metal-slider-handle.png") !important;
   border: none !important;
-  width: 25px;
-  height: 25px;
+  width: 15px !important;
+  height: 15px !important;
   outline: none;
-  top: -9px !important;
+  top: -4px !important;
 }
