--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "RasPlay", root_path, :class => 'brand' %>
+<%= link_to "Rubequ", root_path, :class => 'brand' %>
 <ul class="nav">
   <li><%= link_to 'Home', root_path %></li>
   <li><%= link_to 'Upload Song', '#myModal', :role => "button", :id => 'upload', :"data-toggle" => "modal" %></li>
