--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RasPlay</title>
+    <title>Rubequ</title>
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
     <%= javascript_include_tag "application", "data-turbolinks-track" => true  %>
     <%= csrf_meta_tags %>
-    <link type="image/vnd.microsoft.icon" href="http://www.raspberrypi.org/favicon.ico" rel="shortcut icon"></link>
-    <link type="image/x-ico" href="http://www.raspberrypi.org/favicon.ico" rel="icon"></link>
     <link href=" http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet"></link>
   </head>
   <body>
