Removing some unnecessary files. Updating the ui for the view song page. Adding a edit modal window for changing song information.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,8 @@
       <div class="container">
         <div class="content">
           <div class="row">
-            <div class="span12 text-center">
-              <a href="/"><img src="/images/logo.png" border="0"></a>
+            <div class="span12 center">
+              <%= link_to image_tag("logo.png", :border=>0), root_url %>
             </div>
             <div class="span12">
               <%= render 'layouts/messages' %>
