--- a/app/assets/stylesheets/jplayer.blue.monday.css
+++ b/app/assets/stylesheets/jplayer.blue.monday.css
@@ -23,21 +23,19 @@ div.jp-video {
 	 */
 
 	font-size:1.25em; /* 1.25em for testing in site pages */ /* No parent CSS that can effect the size in the demos ZIP */
-
 	font-family:Verdana, Arial, sans-serif;
 	line-height:1.6;
-	color: #666;
-	border:1px solid #009be3;
-	background-color:#eee;
+	color: #000;
+	background-color:#fff;
 }
 div.jp-audio {
-	width:420px;
+	width:380px;
 }
 div.jp-audio-stream {
 	width:182px;
 }
 div.jp-video-270p {
-	width:480px;
+	width:200px;
 }
 div.jp-video-360p {
 	width:640px;
@@ -79,7 +77,7 @@ div.jp-video-full div.jp-interface {
 
 div.jp-interface {
 	position: relative;
-	background-color:#eee;
+	background-color:#fff;
 	width:100%;
 }
 
@@ -148,51 +146,63 @@ div.jp-interface ul.jp-controls a {
 }
 a.jp-play,
 a.jp-pause {
-	width:40px;
-	height:40px;
 }
 
 a.jp-play {
-	background: url("/jplayer.blue.monday.jpg") 0 0 no-repeat;
+	/*background: url("/jplayer.blue.monday.jpg") 0 0 no-repeat; */
 }
 a.jp-play:hover {
-	background: url("/jplayer.blue.monday.jpg") -41px 0 no-repeat;
+
+	/*background: url("/jplayer.blue.monday.jpg") -41px 0 no-repeat;*/
 }
 a.jp-pause {
+  /*
 	background: url("/jplayer.blue.monday.jpg") 0 -42px no-repeat;
+  */
 	display: none;
 }
 a.jp-pause:hover {
+  /*
 	background: url("/jplayer.blue.monday.jpg") -41px -42px no-repeat;
+  */
 }
 
 a.jp-stop, a.jp-previous, a.jp-next {
-	width:28px;
-	height:28px;
-	margin-top:6px;
 }
 
 a.jp-stop {
+  /*
 	background: url("/jplayer.blue.monday.jpg") 0 -83px no-repeat;
+  */
 	margin-left:10px;
 }
 
 a.jp-stop:hover {
+  /*
 	background: url("/jplayer.blue.monday.jpg") -29px -83px no-repeat;
+  */
 }
 
 a.jp-previous {
+  /*
 	background: url("/jplayer.blue.monday.jpg") 0 -112px no-repeat;
+  */
 }
 a.jp-previous:hover {
+  /*
 	background: url("/jplayer.blue.monday.jpg") -29px -112px no-repeat;
+  */
 }
 
 a.jp-next {
+  /*
 	background: url("/jplayer.blue.monday.jpg") 0 -141px no-repeat;
+  */
 }
 a.jp-next:hover {
+  /*
 	background: url("/jplayer.blue.monday.jpg") -29px -141px no-repeat;
+  */
 }
 
 /* @end */
@@ -201,15 +211,15 @@ a.jp-next:hover {
 
 div.jp-progress {
 	overflow:hidden;
-	background-color: #ddd;
+	background-color: #000;
 }
 div.jp-audio div.jp-progress {
 	position: absolute;
-	top:32px;
+	top:22px;
 	height:15px;
 }
 div.jp-audio div.jp-type-single div.jp-progress {
-	left:110px;
+	left:70px;
 	width:186px;
 }
 div.jp-audio div.jp-type-playlist div.jp-progress {
@@ -223,7 +233,6 @@ div.jp-video div.jp-progress {
 	height:10px;
 }
 div.jp-seek-bar {
-	background: url("/jplayer.blue.monday.jpg") 0 -202px repeat-x;
 	width:0px;
 	height:100%;
 	cursor: pointer;
@@ -249,7 +258,7 @@ a.jp-unmute,
 a.jp-volume-max {
 	width:18px;
 	height:15px;
-	margin-top:12px;
+	margin-top:3px;
 }
 
 div.jp-audio div.jp-type-single a.jp-mute,
@@ -289,36 +298,48 @@ div.jp-video a.jp-volume-max {
 }
 
 a.jp-mute {
+  /*
 	background: url("/jplayer.blue.monday.jpg") 0 -170px no-repeat;
+  */
 }
 a.jp-mute:hover {
+  /*
 	background: url("/jplayer.blue.monday.jpg") -19px -170px no-repeat;
+  */
 }
 a.jp-unmute {
+  /*
 	background: url("/jplayer.blue.monday.jpg") -60px -170px no-repeat;
+  */
 	display: none;
 }
 a.jp-unmute:hover {
+  /*
 	background: url("/jplayer.blue.monday.jpg") -79px -170px no-repeat;
+  */
 }
 a.jp-volume-max {
+  /*
 	background: url("/jplayer.blue.monday.jpg") 0 -186px no-repeat;
+  */
 }
 a.jp-volume-max:hover {
+  /*
 	background: url("/jplayer.blue.monday.jpg") -19px -186px no-repeat;
+  */
 }
 
 div.jp-volume-bar {
 	position: absolute;
 	overflow:hidden;
-	background: url("/jplayer.blue.monday.jpg") 0 -250px repeat-x;
+	background-color:#000;
 	width:46px;
 	height:5px;
 	cursor: pointer;
 }
 div.jp-audio div.jp-volume-bar {
-	top:37px;
-	left:330px;
+	top:28px;
+	left:290px;
 }
 div.jp-audio-stream div.jp-volume-bar {
 	top:37px;
@@ -343,7 +364,7 @@ div.jp-audio div.jp-time-holder {
 	top:50px;
 }
 div.jp-audio div.jp-type-single div.jp-time-holder {
-	left:110px;
+	left:65px;
 	width:186px;
 }
 div.jp-audio div.jp-type-playlist div.jp-time-holder {
@@ -619,9 +640,8 @@ a.jp-shuffle-off:hover {
 
 .jp-no-solution {
 	padding:5px;
-	font-size:.8em;
-	background-color:#eee;
-	border:2px solid #009be3;
+	font-size:.5em;
+	background-color:#fff;
 	color:#000;
 	display:none;
 }
