--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,7 +1,7 @@
 <%= link_to "Rubequ", root_path, :class => 'brand' %>
 <ul class="nav">
   <li><%= link_to 'Home', root_path %></li>
-  <li><%= link_to 'Upload Song', '#myModal', :role => "button", :id => 'upload', :"data-toggle" => "modal" %></li>
+  <li><%= link_to 'Upload Song', '#uploadModal', :role => "button", :id => 'upload', :"data-toggle" => "modal" %></li>
   <li><%= link_to 'View All Songs', songs_path %></li>
 </ul>
 <%= render :partial => "layouts/volume" %>
