--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,11 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <nav class="navbar-inner">
-    <div class="container">
+    <div class="container-fluid">
+      <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
       <%= render 'layouts/navigation' %>
     </div>
   </nav>
