Removing a puts in the song model left over from debugging. Changing the index view button text from view song to view and queue song to queue so the buttons are smaller and looks better on a smaller view size.

--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -15,8 +15,8 @@
         <td><%= song.name %></td>
         <td><%= song.band %></td>
         <td>
-          <%= link_to 'View Song', song, :class => "btn btn-info" %>
-          <button class="btn btn-primary add_to_queue_button" id="<%= song.id %>">Queue Song</button>
+          <%= link_to 'View', song, :class => "btn btn-info" %> 
+          <button class="btn btn-primary add_to_queue_button" id="<%= song.id %>">Queue</button>
         </td>
       </tr>
     <% end %>
