--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -4,15 +4,15 @@
     <div class="span9 center">
       <div class="row pull-left">
         <% if @song.in_queue? %>
-          <button class="btn btn-primary">In Queue</button> 
+          <%= button_tag "In Queue", :class => "btn btn-primary" %>
         <% else %>
-          <button class="btn btn-primary add_to_queue_button" id="<%= @song.id %>">Queue Song</button>
+          <%= button_tag "Queue Song", :class => "btn btn-primary add_to_queue_button", :id => @song.id %>
         <% end %>
-        <button id="lyric_button" class="btn btn-info" target="_blank">Lyrics</button>
-        <a href="<%= @song.mp3_public_path %>" role="button" class="btn" alt="Download mp3" target="_blank" download>Download</a>
+        <%= link_to 'Lyrics', '#', :class => "btn btn-info", :id => "lyric_button" %>
+        <%= link_to 'Download', @song.mp3_public_path, :class => "btn", :alt => "Download mp3" %>
       </div>
       <div class="row pull-right">
-        <%= link_to 'Edit Song', '#editModal', :class => "btn",  :"data-toggle" => "modal" %> 
+        <%= link_to 'Edit Song', '#editModal', :class => "btn",  :"data-toggle" => "modal" %>
         <%= link_to 'Delete Song', @song, :class => "btn btn-danger", :method => :delete, :data => { confirm: 'Are you sure?' } %>
       </div>
     </div>
