Updating the edit and update actions to respond to js formatting. Mostly so its ajax and a page refresh does not have to happen after editing a song. Removed the views for edit and new since they are all handled by the modal partials (_upload and _edit_modal).

--- a/app/views/songs/_edit_modal.html.erb
+++ b/app/views/songs/_edit_modal.html.erb
@@ -4,17 +4,18 @@
     <h3 id="editSong">Edit Song</h3>
   </div>
   <div class="modal-body">
-   <%= form_tag song_path(song), method: "put", class: "form-horizontal", id: "editmusic" do %>
+   <div id='song_notice'></div>
+   <%= form_tag song_path(song), method: "put", remote: true, authenticity_token: true, class: "form-horizontal", id: "editmusic" do %>
       <div class="control-group">
         <label class="control-label">Song Name *</label>
         <div class="controls">
-          <input type="text" id="song_name" name="song[name]" value="<%= song.name %>" required>
+          <input type="text" id="song_name" name="song[name]" value="<%= song.name %>">
         </div>
       </div>
       <div class="control-group">
         <label class="control-label">Band/Artist Name *</label>
         <div class="controls">
-          <input type="text" id="song_band" name="song[band]" value="<%= song.band %>" required>
+          <input type="text" id="song_band" name="song[band]" value="<%= song.band %>">
         </div>
       </div>
       <div class="control-group">
