--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
         <div class="content">
           <div class="row">
             <div class="span12 center">
-              <%= link_to image_tag("logo.png", :border=>0), root_url %>
+              <%= link_to image_tag("logo.png", :border=>0), root_path %>
             </div>
             <div class="span12">
               <%= render 'layouts/messages' %>
