Updating sorting on the songs in queue to be based off the ids that come back from mpd. Also fixing view in view all songs page when no songs are uploaded yet.

--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -15,7 +15,7 @@
         <td><%= song.name %></td>
         <td><%= song.band %></td>
         <td>
-          <%= link_to 'View', song, :class => "btn btn-info" %> 
+          <%= link_to 'View', song, :class => "btn btn-info" %>
           <button class="btn btn-primary add_to_queue_button" id="<%= song.id %>">Queue</button>
         </td>
       </tr>
@@ -28,7 +28,7 @@ $("#songs_table").addTableFilter({
 });
 
 $("document").ready(function() {
-  var songs_in_queue = <%= Song.all_in_queue.map(&:id) %>
+  var songs_in_queue = <%= Song.all_in_queue.blank? ? 0 : Song.all_in_queue.map(&:id) %>
   var current_song = <%= Song.current_song.blank? ? 0 : Song.current_song.id %>
   songs_in_queue.push(current_song)
 
