--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -2,37 +2,25 @@
 <div class="container">
   <div class="row">
     <div class="span9 center">
-      <div class="row pull-left">
-        <% if @song.in_queue? %>
-          <%= button_tag "In Queue", :class => "btn btn-primary" %>
-        <% else %>
-          <%= button_tag "Queue Song", :class => "btn btn-primary add_to_queue_button", :id => @song.id %>
-        <% end %>
-        <%= link_to 'Lyrics', '#', :class => "btn btn-info", :id => "lyric_button" %>
-        <%= link_to 'Download', @song.mp3_public_path, :class => "btn", :alt => "Download mp3" %>
-      </div>
-      <div class="row pull-right">
-        <%= link_to 'Edit Song', '#editModal', :class => "btn",  :"data-toggle" => "modal" %>
-        <%= link_to 'Delete Song', @song, :class => "btn btn-danger", :method => :delete, :data => { confirm: 'Are you sure?' } %>
-      </div>
+      <%= render 'song_details' %>
     </div>
   </div>
   <div class="row">
     <div class="span9 center">
-      <br>
-      <img src="<%= @song.album_cover %>"  class="img-circle" border="0" height="100" width="100" alt="<%= @song.name %>">
-       <h4 id='band_song_name'><%= @song.band_and_song_name_formatted %></h4>
-       <small>
-        Play Count: <%= @song.play_count %> /
-        Last Played: <%= time_ago_in_words_with_blank(@song.last_played, "Not yet played.") %>
-       </small>
-      <%= render :partial => "player", :locals => { :song => @song } %>
+      <%= render 'song_navigation' %>
     </div>
   </div>
   <div class="row">
     <div class="span9 center">
-      <br><br>
-      <div id="lyrics"></div>
+      <div class="row">
+        <div class="span4">
+          <%= render 'comments' %>
+        </div>
+        <div class="span5">
+          <%= render "player" %>
+          <%= render 'lyrics' %>
+        </div>
+      </div>
     </div>
   </div>
 </div>
