Changing db to postgres. Adding last song info and trying to get server side events to work with mpd callbacks. Ugh

--- a/app/views/root/index.html.erb
+++ b/app/views/root/index.html.erb
@@ -21,5 +21,10 @@
       <%= render :partial => "songs/music_queue" %>
     </div>
   </div>
+  <div class="row">
+    <div class="span9 center hide">
+      <%= render :partial => "songs/last_played_song" %>
+    </div>
+  </div>
 </div>
 
